--- a/CH4/about.html
+++ b/CH4/about.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>This is the Start Page</title>
+    <title>About page</title>
   </head>
   <body>
-    <p> Start page</p>
-    <hr>
+    <p> <a href="https://en.wikipedia.org/wiki/Batman"> I am vengeance. I am the night.</a></p>
     <li> <a href ="links.html"> Links Page</a></li>
     <li><a href ="index.html"> Index Page</a></li>
   <li><a href ="untitled.html"> Untitled Page</a></li>
-  <li><a href ="about.html"> About Page</a></li>
+  <li><a href ="start.html"> Start Page</a></li>
   </body>
 </html>
