--- a/CH4/index.html
+++ b/CH4/index.html
@@ -9,5 +9,6 @@
     <li> <a href ="links.html"> Links Page</a></li>
     <li><a href ="start.html"> Start Page</a></li>
   <li><a href ="untitled.html"> Untitled Page</a></li>
+  <li><a href ="about.html"> About Page</a></li>
   </body>
 </html>
