adding parent folders and such

--- a/CH4/index.html
+++ b/CH4/index.html
@@ -10,5 +10,6 @@
     <li><a href ="start.html"> Start Page</a></li>
   <li><a href ="untitled.html"> Untitled Page</a></li>
   <li><a href ="about.html"> About Page</a></li>
+    <li> <a href ="music\open.html"> Open Page</a></li>
   </body>
 </html>
