--- a/Restaurant/appetizers.html
+++ b/Restaurant/appetizers.html
@@ -9,7 +9,7 @@
      <a href="dessert.html"> dessert </a>
       <a href="home.html"> Home </a>
       <a href="main.html">Main</a>
-      <img src="pics\2fb7359731326f8bd2c0639bb2a05117.jpg">
-      <img src="pics\72647-Dracula-Castlevania-Castlevania_Lords_of_Shadow-blood-vampires-video_games.jpg">
+      <img src="pics\2fb7359731326f8bd2c0639bb2a05117.jpg" width="100" height= "100">
+      <img src="pics\72647-Dracula-Castlevania-Castlevania_Lords_of_Shadow-blood-vampires-video_games.jpg" width="50" height="50">
   </body>
 </html>
