--- a/Restaurant/desserts.html
+++ b/Restaurant/desserts.html
@@ -7,8 +7,8 @@
   <body>
     <p> Dessert Page</p>
     <a href="appetizers.html"> appetizers </a>
-    <img src="pics\castlevania-lords-of-shadow-dracula-on-throne-statue-gabriel-belmont-4.jpg">
-    <img src="Restaurant\pics\e5a06942fa42823c88be5f3a834e063d--fantastic-art-bat-family.jpg">
+    <img src="pics\castlevania-lords-of-shadow-dracula-on-throne-statue-gabriel-belmont-4.jpg" width="100" height="100">
+    <img src="Restaurant\pics\e5a06942fa42823c88be5f3a834e063d--fantastic-art-bat-family.jpg" width="100" height="100">
      <a href="home.html"> Home </a>
      <a href="main.html">Main</a>
 
