--- a/Restaurant/main.html
+++ b/Restaurant/main.html
@@ -9,7 +9,7 @@
   <a href="dessert.html"> dessert </a>
    <a href="home.html"> Home </a>
    <a href="appetizers.html">Appetizers</a>
-   <img src="pics\Nightwing_0003.jpg">
-   <img src="pics\resistance-is-futile-10-real-psychological-reasons-the-borg-from-star-trek-are-so-scary.jpg">
+   <img src="pics\Nightwing_0003.jpg" width="100" height="100">
+   <img src="pics\resistance-is-futile-10-real-psychological-reasons-the-borg-from-star-trek-are-so-scary.jpg "height="100" width="100" >
   </body>
 </html>
