--- a/Restaurant/home.html
+++ b/Restaurant/home.html
@@ -8,8 +8,8 @@
     <p> This is the homepage</p>
     <a href="dessert.html"> dessert </a>
      <a href="appetizers.html"> Appetizers </a>
-     <img src="pics\eChxw.jpg">
-     <img src="pics\GalleryComics_1920x1080_20160309_RHOODA_Cv10_56c3d3f3228d51.16190663.jpg">
+     <img src="pics\eChxw.jpg" width="100" height="100">
+     <img src="pics\GalleryComics_1920x1080_20160309_RHOODA_Cv10_56c3d3f3228d51.16190663.jpg" width="100" height="100">
      <a href="main.html">Main</a>
 
   </body>
