Added more parts

--- a/Security/access.html
+++ b/Security/access.html
@@ -7,6 +7,7 @@
   <h1> Cleveland Codes #4 Security Page</h1>
   <h2> Please enter your name and password below </h2>
   <body>
+    <form action="checklist.html">
     <div class="container">
    <label><b>Username</b></label>
    <input type="text" placeholder="Enter Username" name="Me" required>
@@ -14,7 +15,7 @@
    <input type="password" placeholder="Enter Password" name="Tron" required>
 
    <button type="submit">Login</button>
-   <input type="checkbox" checked="checked"> Remember me
+   <input type="checkbox" checked="checked"> Forget You :)
  </div>
  <ol>
  <li><a href ="checklist.html">Checklist</a></li>
