--- a/Security/access.html
+++ b/Security/access.html
@@ -17,8 +17,33 @@
    <button type="submit">Login</button>
    <input type="checkbox" checked="checked"> Forget You :)
  </div>
+
+ <hr>
  <ol>
  <li><a href ="checklist.html">Checklist</a></li>
 <li><a href ="access.html">Access </a></li></ol>
+<hr>
+<h3> Input Box</h3>
+
+<p>
+    <input type="file" name="user-song" value="">
+    <br>
+      <input type="submit" name="Upload" value="upload">
+    </p>
+    <h3> Submit Button</h3>
+    <p>
+      Subscribe Now
+      <br>
+      <input type="text" name="email" value="">
+      <input type="submit" name="Subscribe" value="Subscribe Now">
+    </p>
+    <h2> Image Button</h2>
+    <p>
+      <b>Subscribe <i>now!</i></b>
+      <input type ="text" name ="email" value="">
+      <input type="image" src="../Restaurant/pics/giphy.gif"width="200" height="200">
+      <br>
+
+    </p>
   </body>
 </html>
