Finished.Got distracted

--- a/Security/access.html
+++ b/Security/access.html
@@ -21,7 +21,7 @@
  <hr>
  <ol>
  <li><a href ="checklist.html">Checklist</a></li>
-<li><a href ="access.html">Access </a></li></ol>
+<li><a href ="validation.html">Validation</a></li></ol>
 <hr>
 <h3> Input Box</h3>
 
@@ -43,6 +43,8 @@
       <input type ="text" name ="email" value="">
       <input type="image" src="../Restaurant/pics/giphy.gif"width="200" height="200">
       <br>
+
+
 
     </p>
   </body>
