--- a/Security/checklist.html
+++ b/Security/checklist.html
@@ -7,7 +7,7 @@
   <h1>Security Checklist</h1>
   <body>
     <ol>
-    <li><a href ="checklist.html">Checklist</a></li>
+    <li><a href ="validation.html">Validation</a></li>
    <li><a href ="access.html">Access </a></li></ol>
    <hr>
   <b> Main security</b>
