--- a/clothing/hats.html
+++ b/clothing/hats.html
@@ -53,6 +53,6 @@
           <li><a href="belts.html">snake hats</a></li></ul>
           <p>
     <hr>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1535362.0337278082!2d-81.7360469!3d41.27069245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sembed+google+map+iframe!5e0!3m2!1sen!2sus!4v1502982157915" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d191195.75557212732!2d-81.70741292958562!3d41.516545726496325!3m2!1i1024!2i768!4f13.1!2m1!1sburlington+coat+factory!5e0!3m2!1sen!2sus!4v1503039597328" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </body>
 </html>
