cant make it work the way I want. research needed.

--- a/clothing/sideshoppe.html
+++ b/clothing/sideshoppe.html
@@ -29,12 +29,21 @@
       <h1>Email you@tric-c.edu<br></h1>
         <h1>Phone 216-555-1200</h1>
       <br>
-
+<a href="sideshoppe.html">Refresh</a>
+<hr>
     <h4><p>Thanks for checking out our new menu!!!</p>
       Cleveland Codes Software Development Academy and Dessert Shop</h4>
     <div> <img src="..\Restaurant\pics\m.jpg" height="70"width ="75">
 <img src="..\Restaurant\pics\d.jpg" height="58"width ="75">
 <img src="..\Restaurant\pics\t.jpg"height="70"width ="75">
 <img src="..\Restaurant\pics\z.jpg" height="68" width ="75"></div>
+<p>
+  <hr>
+  <ul>
+  <li><a href="belts.html">The PootieTang Edition</a></li>
+  <li><a href="hats.html">The Habberdasher</a></li>
+  <li><a href="jackets.html">The Fonz</a></li>
+  <li><a href="pants.html">Hmm..I feel a draft</a></li>
+  <li><a href="extras.html">Cheap Stuff!!! Cheap! Cheap!</a></li>
   </body>
 </html>
