--- a/clothing/extras.html
+++ b/clothing/extras.html
@@ -7,7 +7,7 @@
   </head>
   <img class="yaba" src="..\Restaurant\pics\y.jpg" height="215">
   <body>
-  
+
    <img  class="dye" src="..\Restaurant\pics\mario.cur" >
   <body style="cursor: url('..\Restaurant\pics\mario.cur')">
     <h1>EVERYTHING AND THE KITCHEN SINK</h1>
@@ -69,7 +69,7 @@
         </table>
         <hr>
         <ul>
-        <li><a href="belts.html">The PootieTang Edition</a></li>
+        <li><a href="belts.html">belts Belts BELTS</a></li>
         <li><a href="hats.html">The Habberdasher</a></li>
         <li><a href="jackets.html">The Fonz</a></li>
         <li><a href="pants.html">Hmm..I feel a draft</a></li>
