--- a/clothing/hats.html
+++ b/clothing/hats.html
@@ -29,7 +29,7 @@
   <body>
     <h1>My Stuff Inc.</h1>
     <br><p><hr>
-  <p><a href="belts.html">The PootyTang Edition</a></p>
+  <p><a href="belts.html">belts Belts BELTS</a></p>
   <p><a href="jackets.html">The Fonz</a></p>
   <p><a href="pants.html">Stop.Hammer Time</a></p>
   <hr>
