--- a/clothing/jackets.html
+++ b/clothing/jackets.html
@@ -31,7 +31,7 @@
     <h1>My Stuff Inc.</h1>
     <br><p><hr>
     <p><a href="hats.html">The Habberdasher</a></p>
-    <p><a href="belts.html">The PootyTang Edition</a></p>
+    <p><a href="belts.html">belts Belts BELTS</a></p>
     <p><a href="pants.html">Stop.Hammer Time</a></p>
     <hr>
     <h3>list one</h3>
