--- a/clothing/pants.html
+++ b/clothing/pants.html
@@ -31,7 +31,7 @@
     <br><p><hr>
     <p><a href="hats.html">The Habberdasher</a></p>
     <p><a href="jackets.html">The Fonz</a></p>
-    <p><a href="belts.html">The PootyTang Edition</a></p>
+    <p><a href="belts.html">belts Belts BELTS</a></p>
     <hr>
     <h3> list one</h3>
       <hr>
