--- a/clothing/sideshoppe.html
+++ b/clothing/sideshoppe.html
@@ -40,7 +40,7 @@
 <p>
   <hr>
   <ul>
-  <li><a href="belts.html">The PootieTang Edition</a></li>
+  <li><a href="belts.html">belts Belts BELTS</a></li>
   <li><a href="hats.html">The Habberdasher</a></li>
   <li><a href="jackets.html">The Fonz</a></li>
   <li><a href="pants.html">Hmm..I feel a draft</a></li>
