--- a/clothing/extras.html
+++ b/clothing/extras.html
@@ -10,8 +10,9 @@
 
    <img  class="dye" src="..\Restaurant\pics\mario.cur" >
   <body style="cursor: url('..\Restaurant\pics\mario.cur')">
+<div class="table">
     <h1>EVERYTHING AND THE KITCHEN SINK</h1>
-      <table>
+      <table class="table">
         <tr>
         <th>Houseware Items</th>
         <th>Houseware Types</th>
@@ -67,6 +68,7 @@
               <td class="money">$299.00</td>
             </tr>
         </table>
+      </div>
         <hr>
         <ul>
         <li><a href="belts.html">belts Belts BELTS</a></li>
