--- a/clothing/extras.html
+++ b/clothing/extras.html
@@ -8,8 +8,8 @@
   <img class="yaba" src="..\Restaurant\pics\y.jpg" height="215">
   <body>
 
-   <img  class="dye" src="..\Restaurant\pics\mario.cur" >
-  <body style="cursor: url('..\Restaurant\pics\mario.cur')">
+   <img  class="dye" src="..\Restaurant\pics\if_Hipster_1170245.png" >
+  <body style="cursor: url('..\Restaurant\pics\if_Hipster_1170245.png')">
 <div class="table">
     <h1>EVERYTHING AND THE KITCHEN SINK</h1>
       <table class="table">
