--- a/clothing/classassignment.html
+++ b/clothing/classassignment.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="shortcut icon" href="Restaurant\pics\taco.gif"/>
+        <link rel="shortcut icon" href="..\Restaurant\pics\taco.gif"/>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,10 +41,10 @@ td {
     &nbsp;
         <ul class="nav nav-pills">
             <li role="presentation" class="active">
-            <a href="HomeV5.1.html"> <img src="Restaurant\pics\squirrelrito.gif" height="35px" width="50px" > </a>  <span style="padding-left:20px"> </span> </li>
+            <a href="HomeV5.1.html"> <img src="..\Restaurant\pics\squirrelrito.gif" height="35px" width="50px" > </a>  <span style="padding-left:20px"> </span> </li>
             <li role="presentation">   <a href="MenuDoneV5.1.html">
-                <img src="Restaurant\pics\menu (1).gif" height="42px" width="90px"> </a> <span style="padding-left:20px"> </span>    </li>
-            <li role="presentation"> <a href="ContactV5.1.html"> <img src="Restaurant\pics\callnow.gif" height="45px" width="90px"> </a> </li>
+                <img src="..\Restaurant\pics\menu (1).gif" height="42px" width="90px"> </a> <span style="padding-left:20px"> </span>    </li>
+            <li role="presentation"> <a href="ContactV5.1.html"> <img src="..\Restaurant\pics\callnow.gif" height="45px" width="90px"> </a> </li>
         </ul>
     <hr>
     <h4 class="clear">   <center>  Our New Location Hours:  </center>  </h4>
