--- a/CH4/arcade/asteroids.html
+++ b/CH4/arcade/asteroids.html
@@ -42,7 +42,7 @@
 
 </tr>
 <tr>
-  <td>The Asteroids logo and details about the game are seen in the bottom of the flyer. Asteroids is an arcade space shooter released in November 1979 by Atari, Inc. and designed by Lyle Rains, Ed Logg, and Dominic Walsh.</td>
+  <p class="text-primary"><td>The Asteroids logo and details about the game are seen in the bottom of the flyer. Asteroids is an arcade space shooter released in November 1979 by Atari, Inc. and designed by Lyle Rains, Ed Logg, and Dominic Walsh.</td>
     <td>Asteroids is as old as they come.</td>
       <td class="game">Pretty much all but disappeared</td>
 
