--- a/CH4/arcade/mspacman.html
+++ b/CH4/arcade/mspacman.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tales from the Arcade:Ms.Pacman</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styling\style.css">
     <link rel="stylesheet" href="bootstrap\css\bootstrap-theme.min.css" type="text/css">
     <script src="bootstrap\js\bootstrap.min.js"></script>
   </head>
