here we go again

--- a/jpractice/buttons.html
+++ b/jpractice/buttons.html
@@ -52,24 +52,27 @@ document.getElementById('mo').innerHTML=("The answer is"+ total);
 
   </head>
   <body>
-  <p> nice guy</p>
-  <button type="button" name="showButton" onclick="show()" >Press me</button>
 
+<p> nice guy</p>
+
+<button type="button" name="showButton"  onclick="show()" > Press me</button>
 
 <p>
 
 <input type="text" name="tbox" id="blah">
-<button type="button" name="space" onclick="display()">  Show Text Box Info</button>
-
-<p id="super"> Place of super </p>
+<button type="button" name="space" onclick="display()" > Show Text Box Info</button>
+<p id="super"  >   place of super    </p>
 </p>
 
-<button type="button" onclick="adding()"> Big Button</button>
+<button type="button" onclick="adding()" > Big Button</button>
 <br>
-<input type="text" name="numbox" id="num1"> Number 1 box
+
+<input type="text" name="" id="num1"> Number 1 box
 <br>
-<input type="text" name="" id="num2">Number 2 box
-<br>
-<p id="mo"> place for mo </p>
-  </body>
+<input type="text" name="" id="num2"> Number 2 Box
+
+<p id="mo"> place for mo</p>
+
+
+ </body>
 </html>
