--- a/jpractice/pizzeria.html
+++ b/jpractice/pizzeria.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" type="text/css" href="styl.css">
     <link rel="stylesheet" href="bootstrap3\css\bootstrap-theme.min.css" type="text/css">
     <script src="bootstrap3\js\bootstrap.min.js"></script>
+    <script>
+    var total;
+    function show(){
+      alert('Your order has been placed!')
+    };
 
+  function display(){
+     document.getElementById('pizza').innerHTML=(" Yous mugs ordered" + total );
+   };
+
+
+</script>
   </head>
 
   <body>
@@ -17,7 +28,7 @@
     <img title= "FatDon" src="pizzapics\thefatdon.jpg" height="300" width ="400" alt="TheDon">
     <h2> Ayyyy we got it off the back of a truck</h2>
     <h4>Type of :
-    <select name="pizza">
+    <select id="pizza1" onchange="pizza()">
       <option value="Crust">Crust</option>
       <option value="Thick">Thick</option>
       <option value="Thin">Thin</option>
@@ -25,7 +36,7 @@
     </label><br/></fieldset>
   <hr>
   Type of :
-  <select name="pizza">
+  <select name="pizza2" onchange="pizza()">
     <option value="sauce">Sauce</option>
     <option value="sweet">Marinara</option>
     <option value="Spicy">Zesty</option>
@@ -33,7 +44,7 @@
   </label><br/></fieldset>
 <hr>
 Type of :
-<select name="pizza">
+<select name="pizza3" onchange="pizza()">
   <option value="Cheese">Cheese</option>
   <option value="prov">Provolone</option>
   <option value="mozz">Mozzarella</option>
@@ -41,7 +52,7 @@ Type of :
 </label><br/></fieldset>
 <hr>
 First Topping:
-<select name="pizza">
+<select name="pizza4"onchange="pizza()">
   <option value="veg">Veggies</option>
   <option value="mush">Mushroom</option>
   <option value="BO">Black Olive</option>
@@ -50,7 +61,7 @@ First Topping:
 <hr>
 
 Second Topping:
-<select name="pizza">
+<select name="pizza5" onchange="pizza()">
   <option value="meat">Meat</option>
   <option value="steak">Steak</option>
   <option value="chix">Chicken</option>
@@ -58,7 +69,7 @@ Second Topping:
 </label><br/></fieldset>
 <hr>
 Third Topping:
-<select name="pizza">
+<select name="pizza6" onchange="give()">
   <option value="extras">Extras</option>
   <option value="secret">Special Sauce</option>
   <option value="chdr">Cheddar</option>
@@ -71,11 +82,11 @@ Third Topping:
 </label>
 </p>
 <br>
-<button type="button" name="showButton" onclick="show()" >Get tha hookup</button>
+<button type ="button"onclick="display()"
+<p id="pizza">#order</p>
+<button type="button" name="showButton" onclick="show()"  onclick="display()" >Get tha hookup</button>
 <script>
-function show(){
-  alert('Your order has been placed!')
-};
+
 </script>
   </body>
 
