--- a/jpractice/pizzeria.html
+++ b/jpractice/pizzeria.html
@@ -14,9 +14,9 @@
       alert('Your order has been placed!')
     };
 
-  function display(){
-     document.getElementById('pizza').innerHTML=(" Yous mugs ordered" + total );
-   };
+//  function display(){
+    // document.getElementById('pizza').innerHTML=(" Yous mugs ordered " + total );
+  // };
 
 
 </script>
@@ -69,7 +69,7 @@ Second Topping:
 </label><br/></fieldset>
 <hr>
 Third Topping:
-<select name="pizza6" onchange="give()">
+<select name="pizza6" onchange="pizza()">
   <option value="extras">Extras</option>
   <option value="secret">Special Sauce</option>
   <option value="chdr">Cheddar</option>
@@ -82,11 +82,10 @@ Third Topping:
 </label>
 </p>
 <br>
-<button type ="button"onclick="display()"
+<!-- <button type ="button"onclick="display()" -->
 <p id="pizza">#order</p>
 <button type="button" name="showButton" onclick="show()"  onclick="display()" >Get tha hookup</button>
 <script>
-
 </script>
   </body>
 
