--- a/coffeeshoppe/main.html
+++ b/coffeeshoppe/main.html
@@ -2,9 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Main Shoppe Page</title>
+    <link rel="stylesheet" href="baristastyles.css" type="text/css">
+  <!-- <link rel="stylesheet" href="css\bootstrap-theme.min.css">
+    <link rel="stylesheet" href="js\bootstrap.min.js">  -->
+    <script>
+    </script>
+    <div class="container">
+    <a href="main.html">Home</a>
+    <a href="about.html">About Us</a>
+        <button class="dropbtn">Brews</button>
+        <div class="dropdown-content">
+          <a href="cappucinos.html">Cappucino</a>
+            <a href="lattes.html">Lattes</a>
+              <a href="teas.html">Teas</a>
+          </div>
+          <button class="dropbtn">Desserts</button>
+          <div class="dropdown-content">
+            <a href="cake.html">Cakes</a>
+              <a href="donuts.html">Donuts</a>
+                <a href="scones.html">Scones</a>
+            </div>
+            <button class="dropbtn">Sandwhiches</button>
+            <div class="dropdown-content">
+              <a href="tunamelt.html">Tuna Melt</a>
+                <a href="grilledcheese.html">Grilled Cheese</a>
+              </div>
+            </div>
+    <h1> Dem Hipsterz Coffee Cafe</h1>
+
   </head>
+
   <body>
 
+<h2> Where our motto is:</h2>
+
+
+<h3>"Dont harsh the mellow...</h3>
+
+
+<img src="shoppepics\mainlogo.gif">
+<h1>Duh</h1>
+
+<h4>Unless youre ridiculing the unenlightend"</h4>
+
   </body>
+  <audio controls autoplay loop >
+    <source src="shoppepics\Jahzzar_-_05_-_Siesta.mp3" type="audio/mpeg"/>
+    </audio>
+    <div class="default">
 </html>
