--- a/coffeeshoppe/about.html
+++ b/coffeeshoppe/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>About Us</title>
     <link rel="stylesheet" href="baristastyles.css" type="text/css">
     <link rel="stylesheet" href="css\bootstrap-theme.min.css">
     <link rel="stylesheet" href="js\bootstrap.min.js">
