--- a/coffeeshoppe/lattes.html
+++ b/coffeeshoppe/lattes.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Everyone loves Lattes</title>
+    <link rel="stylesheet" href="baristastyles.css" type="text/css">
+    <link rel="stylesheet" href="css\bootstrap-theme.min.css">
+    <link rel="stylesheet" href="js\bootstrap.min.js">
+    <script>
+    </script>
   </head>
   <body>
 
