--- a/coffeeshoppe/main.html
+++ b/coffeeshoppe/main.html
@@ -8,27 +8,35 @@
     <link rel="stylesheet" href="js\bootstrap.min.js">  -->
     <script>
     </script>
-    <div class="container">
-    <a href="main.html">Home</a>
-    <a href="about.html">About Us</a>
-        <button class="dropbtn">Brews</button>
+    <ul>
+    <li><a href="main.html">Main</a></li>
+    <li class="dropdown">
+      <a href="javascript:void(0)" class="dropbtn">Brews</a>
+      <div class="dropdown-content">
+        <a href="cappucinos.html">Cappucino</a>
+        <a href="latte.html">Lattes</a>
+        <a href="teas.html">Teas</a>
+      </div>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Desserts</a>
         <div class="dropdown-content">
-          <a href="cappucinos.html">Cappucino</a>
-            <a href="lattes.html">Lattes</a>
-              <a href="teas.html">Teas</a>
+          <a href="cakes.html">Cakes</a>
+          <a href="donuts.html">Donuts</a>
+          <a href="scones.html">Scones</a>
+        </div>
+        <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
+        <div class="dropdown-content">
+          <a href="tunamelt.html">Tuna Melt</a>
+            <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
-          <button class="dropbtn">Desserts</button>
-          <div class="dropdown-content">
-            <a href="cake.html">Cakes</a>
-              <a href="donuts.html">Donuts</a>
-                <a href="scones.html">Scones</a>
-            </div>
-            <button class="dropbtn">Sandwhiches</button>
-            <div class="dropdown-content">
-              <a href="tunamelt.html">Tuna Melt</a>
-                <a href="grilledcheese.html">Grilled Cheese</a>
-              </div>
-            </div>
+          <li><a href="about.html">About Us</a>
+      </li>
+    </ul>
+    </li>
+  </ul>
+
+    </div>
     <h1> Dem Hipsterz Coffee Cafe</h1>
 
   </head>
@@ -45,7 +53,24 @@
 <h1>Duh</h1>
 
 <h4>Unless youre ridiculing the unenlightend"</h4>
-
+<hr>
+<h5>Coffee</h5>
+<strong>cof·fee</strong>
+<i><strong><br>kôfē,ˈkäfē</br></strong></i>
+<b>noun</b>
+<ol>
+<li> a drink made from the roasted and ground beanlike seeds of a tropical shrub, served hot or iced.
+"a cup of coffee"
+synonyms:	informaljoe, java; decaf
+"a cup of coffee and a raspberry Danish"
+<li>
+the shrub of the bedstraw family that yields the coffee seeds, two of which are contained in each red berry. Native to the Old World tropics, most coffee is grown in tropical America.
+</li>
+<hr>
+<p> Coffee has been around since forever. Hasnt really changed much since....</p>
+<p> If it isnt broke why fix it? Why re-invent the wheel?</p>
+<p> Why even bring this up?</p>
+<p> Well because we have...And its better.</p>
   </body>
   <audio controls autoplay loop >
     <source src="shoppepics\Jahzzar_-_05_-_Siesta.mp3" type="audio/mpeg"/>
