--- a/coffeeshoppe/about.html
+++ b/coffeeshoppe/about.html
@@ -8,7 +8,31 @@
     <link rel="stylesheet" href="js\bootstrap.min.js">
     <script>
     </script>
+
   </head>
+  <ul>
+  <li><a href="main.html">Main</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Brews</a>
+    <div class="dropdown-content">
+      <a href="cappucinos.html">Cappucino</a>
+      <a href="latte.html">Lattes</a>
+      <a href="teas.html">Teas</a>
+    </div>
+    <li class="dropdown">
+      <a href="javascript:void(0)" class="dropbtn">Desserts</a>
+      <div class="dropdown-content">
+        <a href="cakes.html">Cakes</a>
+        <a href="donuts.html">Donuts</a>
+        <a href="scones.html">Scones</a>
+      </div>
+      <li class="dropdown">
+      <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
+      <div class="dropdown-content">
+        <a href="tunamelt.html">Tuna Melt</a>
+          <a href="grilledcheese.html">Grilled Cheese</a>
+        </div>
+        <li><a href="about.html">About Us</a>
   <body>
 
   </body>
