--- a/coffeeshoppe/cakes.html
+++ b/coffeeshoppe/cakes.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sea Tuna</title>
+    <title>Let them eat cake</title>
+    <style>
+
+    }
+    </style>
     <link rel="stylesheet" href="baristastyles.css" type="text/css">
     <link rel="stylesheet" href="css\bootstrap-theme.min.css">
     <link rel="stylesheet" href="js\bootstrap.min.js">
@@ -14,7 +18,7 @@
       <a href="javascript:void(0)" class="dropbtn">Brews</a>
       <div class="dropdown-content">
         <a href="cappucinos.html">Cappucino</a>
-        <a href="latte.html">Lattes</a>
+        <a href="lattes.html">Lattes</a>
         <a href="teas.html">Teas</a>
       </div>
       <li class="dropdown">
@@ -27,7 +31,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Tuna Melt</a>
+          <a href="tunamelt.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
@@ -35,9 +39,11 @@
     </ul>
     </li>
   </ul>
+  <h1> Let them eat cake</h1>
   </head>
-
+<img src="shoppepics\cake.jpg">
   <body>
-
+<p> Whats better thank a delicious peice of cake?Coffee of course....</p>
+<p> Now whats better thank Coffee and cake? OUR coffee and cake...Oh yea</p>
   </body>
 </html>
