--- a/coffeeshoppe/cappucinos.html
+++ b/coffeeshoppe/cappucinos.html
@@ -14,7 +14,7 @@
       <a href="javascript:void(0)" class="dropbtn">Brews</a>
       <div class="dropdown-content">
         <a href="cappucinos.html">Cappucino</a>
-        <a href="latte.html">Lattes</a>
+        <a href="lattes.html">Lattes</a>
         <a href="teas.html">Teas</a>
       </div>
       <li class="dropdown">
@@ -27,7 +27,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Tuna Melt</a>
+          <a href="tunamelt.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
@@ -36,8 +36,10 @@
     </li>
   </ul>
   </head>
-
+  <img src="shoppepics\cap.jpg">
+<h1>Cappucino nectar of Gods</h1>
   <body>
-
+<p> Beautiful and amazing! How else should we describe our delicious cappucinos!</p>
+<p> Well how about the delicious factor? With a taste thats like caffienated ambrosia you definately cant beat that!!</p>
   </body>
 </html>
