--- a/coffeeshoppe/scones.html
+++ b/coffeeshoppe/scones.html
@@ -14,7 +14,7 @@
       <a href="javascript:void(0)" class="dropbtn">Brews</a>
       <div class="dropdown-content">
         <a href="cappucinos.html">Cappucino</a>
-        <a href="latte.html">Lattes</a>
+        <a href="lattes.html">Lattes</a>
         <a href="teas.html">Teas</a>
       </div>
       <li class="dropdown">
@@ -27,7 +27,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Tuna Melt</a>
+          <a href="paninis.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
@@ -35,9 +35,12 @@
     </ul>
     </li>
   </ul>
+  <img src="shoppepics\scones.jpg" height=" 500">
   </head>
-
+<h1>Scones of Legend
   <body>
-
+<p>Some would consider it bold to title a page scones of legend.</p>
+<p> Well do you know what we say?</p>
+<p> Our scones scoff at you</p>
   </body>
 </html>
