--- a/coffeeshoppe/grilledcheese.html
+++ b/coffeeshoppe/grilledcheese.html
@@ -14,7 +14,7 @@
       <a href="javascript:void(0)" class="dropbtn">Brews</a>
       <div class="dropdown-content">
         <a href="cappucinos.html">Cappucino</a>
-        <a href="latte.html">Lattes</a>
+        <a href="lattes.html">Lattes</a>
         <a href="teas.html">Teas</a>
       </div>
       <li class="dropdown">
@@ -27,7 +27,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Tuna Melt</a>
+          <a href="tunamelt.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
@@ -36,8 +36,10 @@
     </li>
     </ul>
   </head>
-
+  <img src="shoppepics\cheese.jpg">
+<h1> The grilled cheesiest...Yes cheesiest</h1>
   <body>
-
+<p> Normally Dem Hipsterz would like me to tell you about the deliciousness of the food.</p>
+<p> But we're gonna have a moment of silence and let it speak for itself.</p>
   </body>
 </html>
