--- a/coffeeshoppe/lattes.html
+++ b/coffeeshoppe/lattes.html
@@ -14,7 +14,7 @@
       <a href="javascript:void(0)" class="dropbtn">Brews</a>
       <div class="dropdown-content">
         <a href="cappucinos.html">Cappucino</a>
-        <a href="latte.html">Lattes</a>
+        <a href="lattes.html">Lattes</a>
         <a href="teas.html">Teas</a>
       </div>
       <li class="dropdown">
@@ -27,7 +27,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Tuna Melt</a>
+          <a href="tunamelt.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
@@ -35,9 +35,12 @@
     </ul>
     </li>
   </ul>
+  <img src="shoppepics\latte.jpg">
   </head>
+<h1> Yes it is a Latte</h1>
 
   <body>
-
+    <p> Here at Dem Hipsterz not only is our quality insane but we have fun too.</p>
+    <p>But dont take our word for it. Come see yourself.</p>
   </body>
 </html>
