--- a/coffeeshoppe/paninis.html
+++ b/coffeeshoppe/paninis.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Let them eat cake</title>
+    <title>Sea Tuna</title>
     <link rel="stylesheet" href="baristastyles.css" type="text/css">
     <link rel="stylesheet" href="css\bootstrap-theme.min.css">
     <link rel="stylesheet" href="js\bootstrap.min.js">
@@ -14,7 +14,7 @@
       <a href="javascript:void(0)" class="dropbtn">Brews</a>
       <div class="dropdown-content">
         <a href="cappucinos.html">Cappucino</a>
-        <a href="latte.html">Lattes</a>
+        <a href="lattes.html">Lattes</a>
         <a href="teas.html">Teas</a>
       </div>
       <li class="dropdown">
@@ -27,7 +27,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Tuna Melt</a>
+          <a href="paninis.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
@@ -35,9 +35,14 @@
     </ul>
     </li>
   </ul>
+
   </head>
-
+<h1>Simply Delicious</h1>
   <body>
-
+    <img src="shoppepics\sand.jpg">
+<p> What can you say about a panini at Dem Hipsterz?</p>
+<p> Not much you  cant see in this sandwhich.</p>
+<p>Duh.</p>
+<p> Take in the deliciousness</p>
   </body>
 </html>
