--- a/coffeeshoppe/teas.html
+++ b/coffeeshoppe/teas.html
@@ -14,7 +14,7 @@
       <a href="javascript:void(0)" class="dropbtn">Brews</a>
       <div class="dropdown-content">
         <a href="cappucinos.html">Cappucino</a>
-        <a href="latte.html">Lattes</a>
+        <a href="lattes.html">Lattes</a>
         <a href="teas.html">Teas</a>
       </div>
       <li class="dropdown">
@@ -27,7 +27,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Tuna Melt</a>
+          <a href="tunamelt.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
@@ -35,9 +35,12 @@
     </ul>
     </li>
   </ul>
+
   </head>
-
+<img src="shoppepics\tea.jpg">
   <body>
-
+<p> You know whats also amazing? Our teas.</p>
+<p> Brewed from the freshest most amazing herbs all 100% of the time.Right when you order.</p>
+<p> Yes we said 100% fresh brew 100% of the time.</p>
   </body>
 </html>
