--- a/coffeeshoppe/about.html
+++ b/coffeeshoppe/about.html
@@ -34,7 +34,7 @@
         <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Sandwhiches</a>
         <div class="dropdown-content">
-          <a href="tunamelt.html">Paninis</a>
+          <a href="paninis.html">Paninis</a>
             <a href="grilledcheese.html">Grilled Cheese</a>
           </div>
           <li><a href="about.html">About Us</a>
