--- a/coffeeshoppe/about.html
+++ b/coffeeshoppe/about.html
@@ -46,13 +46,37 @@
 <h1> About Us</h1>
 <img src= "shoppepics\200w_d (1).gif">
   <body>
+    <table class="table">
+      <tr>
+      <th>Dem Hipsterz</th>
+      
+
+
+</tr>
+<tr>
+<td>What can we tell you about Dem Hipsterz you dont already know?
+I would say alot. Should we tell you? That is the real question</td>
+  <td>  The answer is of course not. An save you the challenge of seeking out an learning how great we are?</td>
+    <td class="odd"></td>
+
+    </tr>
+    <tr class="even">
+      <td> We couldnt do that. As responsible members of society we have the right..no priviledge...no duty to educate the people of the world</td>
+      <td>Especially our customers</td>
+
+
+    </tr>
+    <tr>
+
+          </tr>
+      </table>
+    </div>
 <tb>
   <td>
-    What can we tell you about Dem Hipsterz you dont already know?
-    I would say alot. Should we tell you? That is the real question</td>
+    </td>
     <td>
-      The answer is of course not. An save you the challenge of seeking out an learning how great we are?</td>
-      <td> We couldnt do that. As responsible members of society we have the right..no priviledge...no duty to educate the people of the world</td>
+    </td>
+      <td> </td>
       <td>Especially our customers</td>
 
       <h3>Wanna tell us how great we are? Comment below! Duh.</h3>
