--- a/coffeeshoppe/grilledcheese.html
+++ b/coffeeshoppe/grilledcheese.html
@@ -39,7 +39,16 @@
   <img src="shoppepics\cheese.jpg">
 <h1> The grilled cheesiest...Yes cheesiest</h1>
   <body>
-<p> Normally Dem Hipsterz would like me to tell you about the deliciousness of the food.</p>
-<p> But we're gonna have a moment of silence and let it speak for itself.</p>
+    <table class="table">
+      <tr>
+      <th>Lets talk about the cheese</th>
+      <th>Nah...</th>
+</tr>
+<tr>
+<td>Normally Dem Hipsterz would like me to tell you about the deliciousness of the food</td>
+    </tr>
+    <tr class="even">
+      <td></td>
+      <td class="odd">But we're gonna have a moment of silence and let it speak for itself.</td>
   </body>
 </html>
