--- a/coffeeshoppe/lattes.html
+++ b/coffeeshoppe/lattes.html
@@ -35,7 +35,7 @@
     </ul>
     </li>
   </ul>
-  <img src="shoppepics\latte.jpg">
+  <img src="shoppepics\latte.jpg" height="270">
   </head>
 <h1> Yes it is a Latte</h1>
 
