--- a/coffeeshoppe/paninis.html
+++ b/coffeeshoppe/paninis.html
@@ -37,12 +37,28 @@
   </ul>
 
   </head>
-<h1>Simply Delicious</h1>
+<h1>Simply Delicious </h1>
   <body>
     <img src="shoppepics\sand.jpg">
-<p> What can you say about a panini at Dem Hipsterz?</p>
-<p> Not much you  cant see in this sandwhich.</p>
-<p>Duh.</p>
-<p> Take in the deliciousness</p>
+    <table class="table">
+      <tr>
+      <th>Paninis</th>
+</tr>
+<tr>
+<td> What can you say about a panini at Dem Hipsterz?</td>
+
+    <td class="odd">Not much you  cant see in this sandwhich.</td>
+
+    </tr>
+    <tr class="even">
+      <td> Duh</td>
+
+      <td class="odd">.. Take in the deliciousness</td>
+
+    </tr>
+    <tr>
+
+          </tr>
+
   </body>
 </html>
