--- a/coffeeshoppe/donuts.html
+++ b/coffeeshoppe/donuts.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css\bootstrap-theme.min.css">
     <link rel="stylesheet" href="js\bootstrap.min.js">
     <script>
+    function show(){
+      alert('Attention: New deal in stores only!!! Dem Hipsterz now offering 10% off on every gold donut and coffee!')
+    };
     </script>
     <ul>
     <li><a href="main.html">Main</a></li>
@@ -40,6 +43,8 @@
 <h1> Donuts ALL DAY!!!!!!!</h1>
   <body>
 <p> What do you get when you giv Dem Hipsterz donuts?</p>
-<p> The<strong> BEST</p> donuts ever thats what.Duh..
+<p> The<strong> BEST</strong></p>
+  <p> donuts ever thats what.Duh..</p>
+  <button type="button" onclick="show()"  onclick="display()" >Psst</button>
   </body>
 </html>
