--- a/coffeeshoppe/main.html
+++ b/coffeeshoppe/main.html
@@ -7,6 +7,8 @@
   <!-- <link rel="stylesheet" href="css\bootstrap-theme.min.css">
     <link rel="stylesheet" href="js\bootstrap.min.js">  -->
     <script>
+    alert("Welcome to Dem Hipsterz Coffee Cafe!!! Please look around..On opening day first hundred customers get a free scone. First fifty customers get a free cofee as well.");
+
     </script>
     <ul>
     <li><a href="main.html">Main</a></li>
