--- a/coffeeshoppe/scones.html
+++ b/coffeeshoppe/scones.html
@@ -37,7 +37,7 @@
   </ul>
   <img src="shoppepics\scones.jpg" height=" 500">
   </head>
-<h1>Scones of Legend
+<h1>Scones of Legend</h1>
   <body>
 <p>Some would consider it bold to title a page scones of legend.</p>
 <p> Well do you know what we say?</p>
