--- a/coffeeshoppe/about.html
+++ b/coffeeshoppe/about.html
@@ -14,6 +14,10 @@
     close=document.getElementById('duh').value;
     document.getElementById('yaa').innerHTML=("Dem Hipsterz are " + close );
     }
+  function show(){
+    alert("Thanks for subscribing")
+  }
+
     </script>
     <ul>
     <li><a href="main.html">Main</a></li>
@@ -49,7 +53,7 @@
     <table class="table">
       <tr>
       <th>Dem Hipsterz</th>
-      
+
 
 
 </tr>
@@ -84,6 +88,12 @@ I would say alot. Should we tell you? That is the real question</td>
         <button type="button" name="space" onclick="display()" >Blog Away</button>
         <p id="yaa"  >  Dem Hipsterz are:   </p>
         </p>
+       <p>Subscribe:</p>
+        <p>
+        <input type="email" placeholder="" required>
+          <input type="checkbox" onclick="show()" >Keep me up to date on deals</button>
+        <p> Coupon Lover <input type="radio"checked="unchecked" id="Super saver"></p>
+<p> Coffee Aficionado <input type="radio" checked="unchecked" id="Coffee lover"></p>
     <div class="rectangle">
       <img title="music" src="shoppepics\music.gif"></div>
       <audio controls autoplay loop >
