--- a/coffeeshoppe/donuts.html
+++ b/coffeeshoppe/donuts.html
@@ -45,6 +45,6 @@
 <p> What do you get when you giv Dem Hipsterz donuts?</p>
 <p> The<strong> BEST</strong></p>
   <p> donuts ever thats what.Duh..</p>
-  <button type="button" onclick="show()"  onclick="display()" >Psst</button>
+  <button type="button" onclick="show()"  >Psst</button>
   </body>
 </html>
