--- a/coffeeshoppe/main.html
+++ b/coffeeshoppe/main.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="baristastyles.css" type="text/css">
   <!-- <link rel="stylesheet" href="css\bootstrap-theme.min.css">
     <link rel="stylesheet" href="js\bootstrap.min.js">  -->
+
     <script>
-    alert("Welcome to Dem Hipsterz Coffee Cafe!!! Please look around..On opening day first hundred customers get a free scone. First fifty customers get a free cofee as well.");
+    // alert("Welcome to Dem Hipsterz Coffee Cafe!!! Please look around..On opening day first hundred customers get a free scone. First fifty customers get a free coffee as well.");
+alert({cMsg:"Thank you for filling out the form", nIcon:3, oCheckbox:oCk});
 
     </script>
     <ul>
