--- a/coffeeshoppe/about.html
+++ b/coffeeshoppe/about.html
@@ -92,8 +92,8 @@ I would say alot. Should we tell you? That is the real question</td>
         <p>
         <input type="email" placeholder="" required>
           <input type="checkbox" onclick="show()" >Keep me up to date on deals</button>
-        <p> Coupon Lover <input type="radio"checked="unchecked" id="Super saver"></p>
-<p> Coffee Aficionado <input type="radio" checked="unchecked" id="Coffee lover"></p>
+        <p> Coupon Lover <input type="radio" id="Super saver"></p>
+<p> Coffee Aficionado <input type="radio"  id="Coffee lover"></p>
     <div class="rectangle">
       <img title="music" src="shoppepics\music.gif"></div>
       <audio controls autoplay loop >
