--- a/coffeeshoppe/main.html
+++ b/coffeeshoppe/main.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="js\bootstrap.min.js">  -->
 
     <script>
-    // alert("Welcome to Dem Hipsterz Coffee Cafe!!! Please look around..On opening day first hundred customers get a free scone. First fifty customers get a free coffee as well.");
-alert({cMsg:"Thank you for filling out the form", nIcon:3, oCheckbox:oCk});
+    alert("Welcome to Dem Hipsterz Coffee Cafe!!! Please look around..On opening day first hundred customers get a free scone. First fifty customers get a free coffee as well.");
+
 
     </script>
     <ul>
