--- a/jpractice/timer.html
+++ b/jpractice/timer.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>timer page</title>
   </head>
-  <body>
+  <body onload="begin=interval('changeStatus(),changeMessage()',2000;)">
     <img src="pizzapics/thefatdon.jpg" alt="" width="300" height="300">
     <img src="pizzapics/gfd.gif" alt="" width="300" height="300">
+    <script type="text/javascript" src="scripting/nice.js">
+    </script>
   </body>
 </html>
