--- a/jpractice/scripting/hiding.html
+++ b/jpractice/scripting/hiding.html
@@ -34,6 +34,12 @@ $(document).ready(function(){
         $("#fad").fadeIn(4000);
     });
 });
+$(document).ready(function(){
+    $("#show").click(function(){
+        $("canvas").fadeIn();
+
+    });
+});
 </script>
 
 
@@ -48,13 +54,13 @@ $(document).ready(function(){
     <button id="hide" > hide all paragraphs</button> <button id="display">show all paragraphs </button>
     <p id="fadez"> demonstratefadeIn()</p> <p id="fadie">with different</p> <p id="fad">parameters</p>
 
-<button>meh</button>
-    <button id="fade"> write the code to click fade in on three boxes</button>
 
+    <button id="fade"> write the code to click fade in on three boxes</button>
+<button id="show"> appear</button>
   </div>
   <canvas  width="150" height="150" style="border:1px solid #d3d3d3; background: red;"></canvas>
   <canvas  width="150" height="150" style="border:1px solid #d3d3d3; background: green;"></canvas>
-  <canvas  width="150" height="150" style="border:1px solid #d3d3d3; background: blue;"></canvas>
+  <canvas width="150" height="150" style="border:1px solid #d3d3d3; background: blue;"></canvas>
 </canvas>
 
     </script>
