--- a/jpractice/scripting/auto.html
+++ b/jpractice/scripting/auto.html
@@ -14,9 +14,9 @@
     <p id="showing"> place holder #2</p>
 
 
-    <button type="button" name="button" onclick="mercury()" >Show ford</button>
+    <button type="button"name="button" onclick="mercury()">Show ford</button>
 
-    <script type="text/javascript" src="scripting/space.js">
+    <script type="text/javascript" src="scripting\space.js">
     </script>
   </body>
 </html>
